Update deploy workflow to use manual dispatch
Changed trigger from push to workflow_dispatch with input for branch name.

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,8 +1,9 @@
 name: Deploy Web
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+    inputs:
+      branch_name:
+        default: 'master'
 permissions:
   contents: read
   pages: write
