--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,9 +1,8 @@
 name: Deploy Web
 on:
-  workflow_dispatch:
-    inputs:
-      branch_name:
-        default: 'master'
+  push:
+    branches:
+      - master
 permissions:
   contents: read
   pages: write
