--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -18,12 +18,12 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-go@v6
         with:
-          go-version: '^1.22'
+          go-version: '^1.24'
       - run: go build -o web/game.wasm
         env:
           GOOS: js
           GOARCH: wasm
-      - run: cp $(go env GOROOT)/misc/wasm/wasm_exec.js web/
+      - run: cp $(go env GOROOT)/lib/wasm/wasm_exec.js . web/
 
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v4
