Fix path for wasm_exec.js copy in deploy workflow

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GOOS: js
           GOARCH: wasm
-      - run: cp $(go env GOROOT)/lib/wasm/wasm_exec.js ./web/
+      - run: cp $(go env GOROOT)/lib/wasm/wasm_exec.js ../web/
 
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v4
